--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
             <artifactId>demo2</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-
+        <!-- MySQL 连接驱动依赖 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.29</version>
+        </dependency>
     </dependencies>
 </dependencyManagement>
 
