--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,18 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <modules>
         <module>demo1</module>
         <module>demo2</module>
         <module>demo3</module>
+        <module>demo4</module>
+        <module>demo5</module>
+        <module>demo6</module>
+        <module>demo7</module>
+        <module>demo8</module>
     </modules>
 
 <dependencyManagement>
@@ -42,6 +47,36 @@
         <dependency>
             <groupId>com.iwbz</groupId>
             <artifactId>demo3</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.iwbz</groupId>
+            <artifactId>demo4</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.iwbz</groupId>
+            <artifactId>demo5</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.iwbz.druiddemo</groupId>
+            <artifactId>demo6</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.iwbz</groupId>
+            <artifactId>demo7</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.iwbz</groupId>
+            <artifactId>demo8</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <!-- MySQL 连接驱动依赖 -->
